# python-cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.package_name}}/: setup.cfg
{{cookiecutter.package_name}}/docs/: Makefile
{{cookiecutter.package_name}}/docs/source/: conf.py
{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/: __init__.py  api.py
