##########################
# Setup.py Configuration #
##########################
[metadata]
name = {{cookiecutter.package_name}}
version = 0.0.1-dev
description = {{cookiecutter.short_description}}
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/{{cookiecutter.github_organization_name}}/{{cookiecutter.github_repository_name}}
download_url = https://github.com/{{cookiecutter.github_organization_name}}/{{cookiecutter.github_repository_name}}/releases
project_urls =
    Bug Tracker = https://github.com/{{cookiecutter.github_organization_name}}/{{cookiecutter.github_repository_name}}/issues
    Source Code = https://github.com/{{cookiecutter.github_organization_name}}/{{cookiecutter.github_repository_name}}

# Author information
author = {{cookiecutter.author_name}}
author_email = {{cookiecutter.author_email}}
maintainer = {{cookiecutter.author_name}}
maintainer_email = {{cookiecutter.author_email}}

# This field accepts an entry from the Software Package Data Exchange (SPDX)
# controlled vocabulary. See https://spdx.org/licenses/ for a list of valid
# license codes
license = MIT

# This field points to the LICENSE file in the root of the repository.
license_file = LICENSE

# Trove classifiers are a controlled vocabulary used on PyPI
# for faceted navigation of python packages.
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Framework :: Pytest
    Framework :: tox
    Framework :: Sphinx
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3 :: Only
    # TODO add your topics from the Trove controlled vocabulary (see https://pypi.org/classifiers)

# Keywords are free text that let people search for your package on PyPI
keywords =
    Laboratory of Systems Pharmacology
    Harvard Program in Therapeutic Science
    Harvard Medical School
    cookiecutter
    # TODO add your own free-text keywords

[options]
install_requires =
    # Scientific Python
    pandas
    numpy
    scikit-learn
    # Plotting
    matplotlib
    seaborn
    # Missing itertools from the standard library you didn't know you needed
    more_itertools
    # Use progress bars excessively
    tqdm
    # TODO your requirements go here

# Random options
zip_safe = false
include_package_data = True

# This says what the minimum version of python that this code runs on.
# Since Python 3.6 had its end of life in December 2021, all new packages
# should aim for the next version and higher.
python_requires = >=3.7

# This setting tells setuptools to automatically find code based
# on the package_dir option
packages = find:
package_dir =
    = src

[options.packages.find]
where = src


[options.extras_require]
tests =
    pytest
    coverage
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints
    sphinx_automodapi
    # To include LaTeX comments easily in your docs. 
    # If you uncomment this, don't forget to do the same in docs/conf.py
    # texext
